--- a/Developer Plus/css/screen/login.css
+++ b/Developer Plus/css/screen/login.css
@@ -49,7 +49,7 @@
     font-size: 14px;
 }
 #login-form button[type="button"]{
-    background-color: rgb(148, 178, 239);
+    background-color: #fae100;;
     cursor:pointer;
     padding:20px 0px;
     border-radius: 5px;
@@ -60,4 +60,10 @@
     font-size: 18px;
     margin-bottom: 25px ;
     
+}
+#login-form a:hover{
+    color:rgb(148, 178, 239);
+}
+#login-form i{
+    margin: 0px 20px;
 }
