--- a/Developer Plus/css/components/screen-header.css
+++ b/Developer Plus/css/components/screen-header.css
@@ -1,33 +1,71 @@
-.screen-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 25px;
-    border-bottom: 1px solid rgba(0,0,0,0.2);
-}
-.screen-header > span{
-    font-size: 30px;
-    font-weight: 600;
-}
-.screen-header__main_menu ul{
-    width: 100%;
-    background-color: rgb(148, 178, 239);
-    list-style-type: none;
-    margin: 0;
-    display: flex;
-    font-size: 20px;
-    padding-left: 400px;
-}
-.screen-header__main_menu li{
-    padding-left: 20px;
-}
-.screen-header__main_menu li:last-child{
-    padding-left: 40px;
-}
-.screen-header__sub_menu span{
-    padding-left: 10px;
-}
-.screen-header__main_menu li:hover{
-    background-color:rgb(148, 178, 239);
-    
-}
+.header {
+    padding:25px;
+    position: fixed;
+  }
+  nav ul {
+    margin-left:700px;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  nav ul li {
+    display: inline-block;
+    font-weight:bold;
+  }
+  
+  .home {
+    text-align: center;
+    font-weight: bold;
+    float: right;
+  }
+  .title{
+    display:flex;
+    align-items:center;
+    font-size:30px;
+    text-align: center;
+    font-weight: bold;
+    float: left;
+    padding:0px;
+  }
+  .home div {
+    display: block;
+    color: black;
+    padding: 16px 16px;
+  }
+  
+
+  .dropdown-menu {
+    background-color: white;
+    color: black;
+    padding: 16px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
+  /* dropdown-menu 에는 hover 적용이 안됨 */
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .dropdown-menu:hover {
+    color: rgb(148, 178, 239);
+
+  }
+  .dropdown i{
+    padding : 0px 5px 0px 0px;
+  }
+  .home:hover{
+    color:rgb(148, 178, 239);
+  }
+  .profile{
+    background-color: white;
+    text-align: center;
+    font-weight: bold;
+  }
+  .profile div {
+    display: block;
+    text-decoration: none;
+    color: black;
+    padding-left :30px ;
+  }
