--- a/Developer Plus/css/components/screen-header.css
+++ b/Developer Plus/css/components/screen-header.css
@@ -1,13 +1,13 @@
 .header {
     padding:25px;
     position: fixed;
-  }
-  nav ul {
-    margin-left:700px;
-    padding: 0;
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+    WIDTH:100%;
     box-sizing: border-box;
+}
+  ul{
+    padding-left:700px;
   }
-  
   nav ul li {
     display: inline-block;
     font-weight:bold;
@@ -28,12 +28,11 @@
     padding:0px;
   }
   .home div {
-    display: block;
-    color: black;
     padding: 16px 16px;
   }
-  
-
+  .home:hover{
+    color: rgb(148, 178, 239);
+  }
   .dropdown-menu {
     background-color: white;
     color: black;
@@ -41,9 +40,6 @@
     font-size: 16px;
     cursor: pointer;
   }
-  
-  /* dropdown-menu 에는 hover 적용이 안됨 */
-  
   .dropdown:hover .dropdown-content {
     display: block;
   }
@@ -55,13 +51,11 @@
   .dropdown i{
     padding : 0px 5px 0px 0px;
   }
-  .home:hover{
-    color:rgb(148, 178, 239);
-  }
   .profile{
     background-color: white;
     text-align: center;
     font-weight: bold;
+    padding-left:500px;
   }
   .profile div {
     display: block;
