--- a/Developer Plus/css/components/status-bar.css
+++ b/Developer Plus/css/components/status-bar.css
@@ -1,22 +1,20 @@
-.status-bar{
-    
-    box-sizing: border-box;
-    display: flex;
-    justify-content: flex-start;
-    padding:25px;
-    font-size: 30px;
-    font-weight: 600;
-
+.status-bar {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: flex-start;
+  padding: 25px;
+  font-size: 30px;
+  font-weight: 600;
+  margin-top: -10px;
+  padding: 15px;
 }
-.status-bar  span:hover{
-    cursor:pointer;
+.status-bar span:hover {
+  cursor: pointer;
 }
 
 .status-bar__ul {
-    font-size: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  font-size: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
-
