--- a/Idivisual Work/NYJ/css/screen/font.css
+++ b/Idivisual Work/NYJ/css/screen/font.css
@@ -1,6 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 * {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 .category {
   font-size: 30px;
