--- a/Developer Plus/css/components/screen-header.css
+++ b/Developer Plus/css/components/screen-header.css
@@ -5,14 +5,15 @@
   width: 100%;
   box-sizing: border-box;
 }
+
 ul {
-  padding-left: 700px;
+  padding-left: 50%;
 }
+
 nav ul li {
   display: inline-block;
   font-weight: bold;
 }
-
 .home {
   text-align: center;
   font-weight: bold;
@@ -56,7 +57,7 @@ nav ul li {
   background-color: white;
   text-align: center;
   font-weight: bold;
-  padding-left: 500px;
+  padding-left: 70%;
 }
 .profile div {
   display: block;
