--- a/Idivisual Work/LYH/demo/src/main/resources/static/css/components/screen-header.css
+++ b/Idivisual Work/LYH/demo/src/main/resources/static/css/components/screen-header.css
@@ -1,23 +1,25 @@
 .header {
-  padding: 15px;
+  padding: 1.5%;
   position: fixed;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  width: 100%;
+  /* border-bottom: 1px solid rgba(0, 0, 0, 0.2); */
+  width: 100vw; height: 10vh;
   box-sizing: border-box;
 }
 
-ul {
+/* ul {
   padding-left: 50%;
-}
+} */
 
 nav ul li {
-  display: inline-block;
+  /* display: inline-block; */
   font-weight: bold;
 }
 .home {
-  text-align: center;
+  flex: none;
+  /* text-align: center; */
   font-weight: bold;
-  float: right;
+  /* float: right; */
+  margin-left: auto;
 }
 .title {
   display: flex;
@@ -27,7 +29,7 @@ nav ul li {
   font-weight: bold;
   float: left;
   padding: 0px;
-  margin-top: -10px;
+  /* margin-top: -10px; */
 }
 .home div {
   padding: 0px;
@@ -36,31 +38,34 @@ nav ul li {
   color: rgb(148, 178, 239);
 }
 .dropdown-menu {
+  flex: none;
   background-color: white;
   color: black;
   padding: 0px;
-  padding-left: 25px;
+  /* padding-left: 10px; */
   font-size: 16px;
   cursor: pointer;
+  margin-left: auto;
 }
-.dropdown:hover .dropdown-content {
+
+/* .dropdown:hover .dropdown-content {
   display: block;
-}
+} */
 
 .dropdown-menu:hover {
   color: rgb(148, 178, 239);
 }
-.dropdown i {
+/* .dropdown i {
   padding: 0px 5px 0px 0px;
-}
+} */
 .profile {
   background-color: white;
-  text-align: center;
+  /* text-align: center; */
   font-weight: bold;
   padding-left: 70%;
 }
 .profile div {
-  display: block;
+  /* display: block; */
   text-decoration: none;
   color: black;
   padding-left: 30px;
