--- a/Idivisual Work/LYH/demo/src/main/resources/static/css/screen/chat.css
+++ b/Idivisual Work/LYH/demo/src/main/resources/static/css/screen/chat.css
@@ -7,10 +7,36 @@ body {
     padding: 0;
 }
 
-#chat-outer {
+.chat-background {
+    width: 100vw; height: 90vh;
+    position: relative; top: 50%; left: 50%; transform: translate(-50%, 0%);
+    background-color: rgb(248, 248, 248);
+}
+
+.chat-mainpanel {
+    width: 70vw; height: 80vh;
     display: flex;
-    flex-direction: column;
-    width: 100vw; height: 100vh;
+    position: relative; top: 50%; left: 50%; transform: translate(-50%, -50%);
+    background: white;
+    border: 1px solid rgb(222, 222, 222);
+}
+
+.img-btn {
+    flex: none;
+    width: 80%; height: 10%;
+    border: none;
+    outline: none;
+    background-color: white;
+    position: relative; top: 0%; left: 50%; transform: translate(-50%, 0%);
+}
+
+.placeholder {
+    color: rgb(222, 222, 222);
+}
+
+.sort-center {
+    text-align: center;
+    position: relative; top: 50%; left: 50%; transform: translate(-50%, -50%);
 }
 
 .chat-divcol {
@@ -25,6 +51,10 @@ body {
 
 .chat-div10 {
     flex: 10 1 auto;
+}
+
+.chat-div15 {
+    flex: 15 1 auto;
 }
 
 .chat-div20 {
@@ -43,11 +73,26 @@ body {
     flex: 80 1 auto;
 }
 
+.chat-div85 {
+    flex: 85 1 auto;
+}
+
 .chat-div90 {
     flex: 90 1 auto;
 }
 
-.chat-box {
-    border: 1px solid black;
-    /* border: none; */
+.linebox-full {
+    border: 1px solid rgb(222, 222, 222);
+}
+
+.linebox-right {
+    border-right: 1px solid rgb(222, 222, 222);
+}
+
+.linebox-bottom {
+    border-bottom: 1px solid rgb(222, 222, 222);
+}
+
+.linebox-top {
+    border-top: 1px solid rgb(222, 222, 222);
 }
