--- a/Idivisual Work/NYJ/css/screen/board.css
+++ b/Idivisual Work/NYJ/css/screen/board.css
@@ -37,3 +37,13 @@
   flex-wrap: wrap;
   width: 33.33%;
 }
+
+.main {
+  height: 1000px;
+  background-color: #fafafa;
+}
+.content {
+  width: 100px;
+  height: 100px;
+  background-color: #ffffff;
+}
