--- a/Idivisual Work/LYH/demo/src/main/resources/static/css/screen/topview.css
+++ b/Idivisual Work/LYH/demo/src/main/resources/static/css/screen/topview.css
@@ -1,17 +1,7 @@
-* {
-    box-sizing: border-box;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-}
-
 .topview-background {
     width: 100vw; height: 10vh;
     position: relative; top: 50%; left: 50%; transform: translate(-50%, 0%);
     background-color: white;
-    align-items: center;
 }
 
 .topview-row {
@@ -29,6 +19,7 @@ body {
     color: black;
     font-size: 30px;
     font-weight: bold;
+    font-family: Tahoma;
     margin-left: 2%;
 }
 
@@ -39,4 +30,4 @@ body {
     font-size: 16px;
     cursor: pointer;
     margin-right: 2%;
-  }
+}
