--- a/Idivisual Work/LYH/demo/src/main/resources/static/css/screen/topview.css
+++ b/Idivisual Work/LYH/demo/src/main/resources/static/css/screen/topview.css
@@ -1,33 +1,50 @@
 .topview-background {
-    width: 100vw; height: 10vh;
-    position: relative; top: 50%; left: 50%; transform: translate(-50%, 0%);
-    background-color: white;
-}
-
-.topview-row {
+    width: 100%;
+    height: 10vh;
+    box-sizing: border-box;
     display: flex;
-    flex-direction: row;
-}
+    justify-content: space-between;
+    align-items: center;
+  }
 
-.topview-reverserow {
-    display: flex;
-    flex-direction: row-reverse;
-}
+  .topview-background ul {
+    float: right;
+  }
 
-.topview-title {
-    background-color: white;
-    color: black;
-    font-size: 30px;
+  .topview-title {
+    font-size: 25px;
     font-weight: bold;
     font-family: Tahoma;
     margin-left: 2%;
-}
+  }
 
-.topview-dropdown-menu {
+  a {
+    text-decoration: none;
+    color: black;
+  }
+
+  .topview-dropdown-menu {
     background-color: white;
     font-weight: bold;
     color: black;
     font-size: 16px;
     cursor: pointer;
-    margin-right: 2%;
-}
+    padding-left: 10px;
+  }
+  
+  ul {
+    padding-right: 1rem;
+  }
+
+  li {
+    display: inline-block;
+    font-weight: bold;
+  }
+  
+  .topview-dropdown-menu a:hover {
+    color: rgb(148, 178, 239);
+  }
+
+  .topview-dropdown-menu i:hover {
+    color: rgb(148, 178, 239);
+  }
