--- a/Developer Plus/css/screen/topbar.css
+++ b/Developer Plus/css/screen/topbar.css
@@ -1,10 +1,13 @@
 .topbar-background {
   width: 100%;
-  height: 10vh;
+  height: 20vh;
   box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-top: 10vh;
+  z-index: 999;
+  background-color: #fff;
 }
 .top-bar-find a {
   float: right;
