--- a/Developer Plus/css/screen/topview.css
+++ b/Developer Plus/css/screen/topview.css
@@ -1,10 +1,13 @@
 .topview-background {
   width: 100%;
-  height: 10vh;
+  height: 10%;
+  position: fixed;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 1000;
+  background-color: #fff;
 }
 .topview-background ul {
   float: right;
