--- a/Developer Plus/css/screen/topbar.css
+++ b/Developer Plus/css/screen/topbar.css
@@ -18,12 +18,64 @@
   padding-left: 10px;
   padding-right: 1rem;
 }
-.top-bar-find a:hover {
+.topbar-find a:hover {
   color: #94b2ef;
 }
-.topbar-first-filter {
-  font-size: 25px;
-  font-weight: bold;
+.topbar-filter {
+  font-size: 18px;
   font-family: Tahoma;
-  margin-left: 2%;
+  /* margin-left: 2%; */
+  width: 60%;
+}
+.topbar-filter li {
+  list-style: none;
+}
+.topbar-filter a {
+  text-decoration: none;
+}
+.ft-menu a {
+  color: black;
+}
+/* 필터 메뉴 */
+.ft-menu > li {
+  display: inline-block;
+  position: relative;
+  text-align: center;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  width: 20%;
+  line-height: 300%;
+  cursor: pointer;
+}
+.ft-list {
+  display: none;
+  margin: 0;
+  padding: 0;
+}
+/* 필터 리스트 */
+.ft-list > li {
+  width: 150%;
+  background-color: white;
+  line-height: 200%;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+/* 직무 세부 리스트 */
+.ft-list > li > ul > li {
+  width: 100%;
+  background-color: white;
+  line-height: 200%;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  display: none;
+}
+/* 호버 */
+.topbar-filter ul li:hover ul {
+  display: block;
+  position: absolute;
+  text-align: center;
+  line-height: 30px;
+}
+.ft-list li:hover li {
+  display: block;
+  text-align: center;
+  line-height: 30px;
 }
