--- a/Idivisual Work/NYJ/css/components/screen-header.css
+++ b/Idivisual Work/NYJ/css/components/screen-header.css
@@ -1,8 +1,9 @@
 .header {
-  padding: 15px;
-  display: fixed;
+  padding: 1.5%;
+  position: fixed;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  width: 100%;
+  width: 100vw;
+  height: 10vh;
   box-sizing: border-box;
 }
 
@@ -15,9 +16,11 @@ nav ul li {
   font-weight: bold;
 }
 .home {
+  flex: none;
   text-align: center;
   font-weight: bold;
   float: right;
+  margin-left: auto;
 }
 .title {
   display: flex;
@@ -27,7 +30,7 @@ nav ul li {
   font-weight: bold;
   float: left;
   padding: 0px;
-  margin-top: -10px;
+  margin-top: -1%;
 }
 .home div {
   padding: 0px;
@@ -36,23 +39,26 @@ nav ul li {
   color: rgb(148, 178, 239);
 }
 .dropdown-menu {
+  flex: none;
   background-color: white;
   color: black;
   padding: 0px;
-  padding-left: 25px;
+  /* padding-left: 10px; */
   font-size: 16px;
   cursor: pointer;
+  margin-left: auto;
 }
-.dropdown:hover .dropdown-content {
+
+/* .dropdown:hover .dropdown-content {
   display: block;
-}
+} */
 
 .dropdown-menu:hover {
   color: rgb(148, 178, 239);
 }
-.dropdown i {
+/* .dropdown i {
   padding: 0px 5px 0px 0px;
-}
+} */
 .profile {
   background-color: white;
   text-align: center;
@@ -64,8 +70,4 @@ nav ul li {
   text-decoration: none;
   color: black;
   padding-left: 30px;
-}
-img {
-  width: 70px;
-  height: auto;
 }
