--- a/Idivisual Work/NYJ/css/screen/login.css
+++ b/Idivisual Work/NYJ/css/screen/login.css
@@ -1,3 +1,7 @@
+body {
+  width: 100%;
+  height: 100vh;
+}
 .welcome-header {
   margin: 70px 0px;
   text-align: center;
@@ -67,11 +71,11 @@
 #signup {
   display: flex;
   flex-direction: column;
-  margin: 20px 30px;
+  margin: 30px 30px;
 }
 #signup input {
   border: none;
-  padding: 15px 0px;
+  padding: 10px 0px;
   font-size: 10px;
   margin-bottom: 15px;
 }
@@ -83,6 +87,7 @@
   cursor: pointer;
   padding: 10px;
   border-radius: 5px;
+  margin-top: -10px;
 }
 #signup button {
   border: none;
