--- a/Developer Plus/demo/src/main/frontend/src/App.css
+++ b/Developer Plus/demo/src/main/frontend/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  text-align: start;
   background-color: rgb(248, 248, 248);
   font-family: Tahoma, sans-serif;
 }
@@ -880,3 +879,4 @@ body {
   font: inherit;
   vertical-align: baseline;
 }
+/* 댓글창*/
