--- a/Developer Plus/demo/src/main/frontend/src/App.css
+++ b/Developer Plus/demo/src/main/frontend/src/App.css
@@ -487,6 +487,7 @@ button span {
 .profile__thumbnail > img {
   width: 100%;
   height: auto;
+
   object-fit: cover;
 }
 .content {
@@ -618,6 +619,9 @@ button span {
   position: relative;
   border-radius: 8px;
   background-color: #f5f5f5;
+}
+.txtWrap{
+  
 }
 .search_story .thumbnail img {
   width: 145px;
