--- a/Developer Plus/demo/src/main/frontend/src/routes/TalkDetail.css
+++ b/Developer Plus/demo/src/main/frontend/src/routes/TalkDetail.css
@@ -23,6 +23,7 @@ body {
   align-items: flex-end;
 }
 .Mychat-message {
+  margin-left: 30%;
   background-color: yellow;
   box-sizing: border-box;
   border-radius: 10px;
